##Text encoding: utf-8

2009-03-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/theme.cc: fixed an issue related to file themes.

2009-03-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/fragmenttool.cc: Another fix to #25888.
	* plugins/paint/text/texttool.cc: ditto.

2009-03-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.h: Fixed crashes while copying text. [#25888]
	* libs/gcp/widgetdata.cc: ditto.
	* libs/gcp/widgetdata.h: ditto.
	* plugins/paint/text/texttool.cc: ditto.

2009-03-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/object.cc: load "text" nodes when they have children.

2009-03-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fix integer loading on big endian machines.

2009-03-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/chaintool.cc: dont resize the atom array
	when not needed.

2009-03-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/crystal/prefs.glade: set page size to 0 for spin buttons to
	avoid a warning when using gtk+-2 >= 2.14.0.
	* glade/crystal/view-settings.glade: ditto.
	* glade/image-resolution.glade: ditto.
	* glade/image-size.glade: ditto.
	* glade/paint/preferences.glade: ditto.
	* glade/paint/zoom.glade: ditto.
	* glade/print-setup.glade: ditto.
	* glade/table/state-thermometer.glade: ditto.
	* plugins/paint/arrows/arrowtool.glade: ditto.
	* plugins/paint/bonds/bond.glade: ditto.
	* plugins/paint/bonds/chain.glade: ditto.
	* plugins/paint/cycles/cycle.glade: ditto.
	* plugins/paint/cycles/cyclen.glade: ditto.
	* plugins/paint/selection/group.glade: ditto.
	* plugins/paint/text/fontsel.glade: ditto.

2009-03-06  Daniel Leidert  <daniel.leidert@wgdd.de>
	* libs/gcp/about.cc: Fixed FSF address.
	* libs/canvas/gcp-canvas-i18n.h: ditto.
	* libs/canvas/gcp-canvas-text.c: ditto.
	* libs/canvas/gcp-canvas-polygon.c: ditto.
	* libs/canvas/gcp-canvas-line.c: ditto.
	* libs/canvas/gcp-canvas-rect-ellipse.c: ditto.