@@ -1,11 +1,11 @@
 .\"     Title: gchem3d
 .\"    Author: Jean Br\('efort <jean.brefort@normalesup.org>
 .\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: $Date: 2008-09-01 21:46:41 +0200 (Mo, 01. Sep 2008) $
+.\"      Date: $Date: 2008-09-01 21:46:41 +0200 (lun 01 sep 2008) $
 .\"    Manual: gnome-chemistry-utils
 .\"    Source: gcu 0.10
 .\"
-.TH "GCHEM3D" "1" "$Date: 2008\-09\-01 21:46:41 +0200 (Mo, 01\&. Sep 2008) $" "gcu 0.10" "gnome-chemistry-utils"
+.TH "GCHEM3D" "1" "$Date: 2008\-09\-01 21:46:41 +0200 (lun 01 sep 2008) $" "gcu 0.10" "gnome-chemistry-utils"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -14,7 +14,7 @@
 gchem3d \- a small chemical viewer application
 .SH "SYNOPSIS"
 .HP 8
-\fBgchem3d\fR [\fBOPTION(S)\fR...] [\fIFILE\fR]
+\fBgchem3d\fR [\fBOPTION(S)\fR...] [\fIFILE\fR...]
 .SH "DESCRIPTION"
 .PP
 \fBgchem3d\fR
