@@ -1,11 +1,11 @@
 .\"     Title: gcrystal
 .\"    Author: Jean Br\('efort <jean.brefort@normalesup.org>
 .\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: $Date: 2008-09-01 21:48:58 +0200 (Mo, 01. Sep 2008) $
+.\"      Date: $Date: 2008-09-01 21:48:58 +0200 (lun 01 sep 2008) $
 .\"    Manual: gnome-chemistry-utils
 .\"    Source: gcu 0.10
 .\"
-.TH "GCRYSTAL" "1" "$Date: 2008\-09\-01 21:48:58 +0200 (Mo, 01\&. Sep 2008) $" "gcu 0.10" "gnome-chemistry-utils"
+.TH "GCRYSTAL" "1" "$Date: 2008\-09\-01 21:48:58 +0200 (lun 01 sep 2008) $" "gcu 0.10" "gnome-chemistry-utils"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -14,7 +14,7 @@
 gcrystal \- light model visualizer for crystal structures
 .SH "SYNOPSIS"
 .HP 9
-\fBgcrystal\fR [\fBOPTION(S)\fR...] [\fIFILE\fR]
+\fBgcrystal\fR [\fBOPTION(S)\fR...] [\fIFILE\fR...]
 .SH "DESCRIPTION"
 .PP
 \fBgcrystal\fR
