@@ -1,24 +1,24 @@
 .\"     Title: gspectrum
 .\"    Author: Jean Br\('efort <jean.brefort@normalesup.org>
 .\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: $Date: 2008-09-01 21:48:58 +0200 (Mo, 01. Sep 2008) $
+.\"      Date: $Date: 2008-09-01 21:48:58 +0200 (lun 01 sep 2008) $
 .\"    Manual: gnome-chemistry-utils
 .\"    Source: gcu 0.10
 .\"
-.TH "GSPECTRUM" "1" "$Date: 2008\-09\-01 21:48:58 +0200 (Mo, 01\&. Sep 2008) $" "gcu 0.10" "gnome-chemistry-utils"
+.TH "GSPECTRUM" "1" "$Date: 2008\-09\-01 21:48:58 +0200 (lun 01 sep 2008) $" "gcu 0.10" "gnome-chemistry-utils"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
 .ad l
 .SH "NAME"
-gspectrum \- ...
+gspectrum \- a small spectrum viewer application
 .SH "SYNOPSIS"
 .HP 10
-\fBgspectrum\fR [\fBOPTION(S)\fR...]
+\fBgspectrum\fR [\fBOPTION(S)\fR...] [\fIFILE\fR...]
 .SH "DESCRIPTION"
 .PP
 \fBgspectrum\fR
-\&.\&.\&.\&.
+is a simple spectrum visualizer\&. It is only able to display files in the JCAMP\-DX format\&.
 .SH "OPTIONS"
 .PP
 The following options are accepted:
