@@ -1,6 +1,12 @@
 ##Text encoding: utf-8
 
 2009-03-18  Jean Bréfort  <jean.brefort@normalesup.org>
+	* docs/man/gchem3d.1: updated man page.
+	* docs/man/gcrystal.1: ditto.
+	* docs/man/gspectrum.1: ditto.
+	* programs/crystal/document.cc: fixed file comment update.
+
+2009-03-18  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/theme.cc: fixed an issue related to file themes.
 
 2009-03-17  Jean Bréfort  <jean.brefort@normalesup.org>
